--- a/page2.html
+++ b/page2.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Моя страница</title>
+	<meta charset="UTF-8">
+	<title>Моя страница</title>
 </head>
-<body></body>
+<body>
+	<h1> My First Heading UPDATE</h1>
+</body>
 </html>
