--- a/page2.html
+++ b/page2.html
@@ -5,6 +5,8 @@
 	<title>Моя страница</title>
 </head>
 <body>
+	<p> My first paragraph. UPDATE</p>
+
 	<h1> My First Heading UPDATE</h1>
 </body>
 </html>
