--- a/dirPage1/page1.html
+++ b/dirPage1/page1.html
@@ -4,7 +4,7 @@
 		<title>Page Title</title>
 	</head>
 	<body>
-		<h1> My First Heading UPDATE</h1>
-		<p> My first paragraph. UPDATE</p>
+		<h1> My First Heading UPDATE2</h1>
+		<p> My first paragraph. UPDATE2</p>
 	</body>
 </html>
